--- a/index.html
+++ b/index.html
@@ -1,81 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArtofLawnCareLLC</title>
-    <link href="index.css" rel="stylesheet"/>
-    <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
-    <nav class="navbar"> <!--NavBar for section quicklink-->
-        <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
-        <a class="nav-link" href="#companyName">Welcome</a>  
-        <a class="nav-link" href="#services">Services</a>
-        <a class="nav-link" href="#images">Gallery</a>
-        <a class="nav-link" href="#about-me">About Me</a>
-        <a class="nav-link" href="#contacts">Contact-Us</a>
-    </nav>
-</head>
-<body>
-    <section id="imgHead">   <!--Name, Motto, Background photo-->
-        <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
-        <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
-    </section>
-    <div id="welcomeMsg">Welcome to <strong>'The Art of Lawn Care'</strong><br>A new start-up, fair-priced <strong>High Quality</strong> Lawn Management service.<br>From Artistic lawn cutting and Precise String trimming to Landscapes or Pathways.<br>If your job needs an Artistic touch we are the right company for you.
-    </div>
-    <section id="serviceArea">  <!--Service area with Map and named locations-->
-        <p>Who and where do I serve:</p>
-        <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Beverly Hills, Citrus Springs, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
-            <img class="zoom" id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg" alt="Florida map">
-        <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
-    </section>
-    <div id="services">Services:</div>  <!--Servive list and photos--> 
-        <li id="ServiceList">Artistic Lawn Cutting</li>
-        <li id="ServiceList">Percise String Trimming / Edging</li>
-        <li id="ServiceList">Landscape Bed Maintenance</li>
-        <li id="ServiceList">Hedge Trimming</li>
-        <li id="ServiceList">Flower Plantings / Design</li>
-        <li id="ServiceList">Pathways / Patios</li>
-        <li id="ServiceList">Stonework</li>
-        <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
-        <li id="ServiceList">And More....</li>
-    <div id="photo-text">Photo Gallery:</div>
-    <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
-        <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg" alt="3-teir lines">
-        <img class="zoom" id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg" alt="Staircase lines">
-        <img class="zoom" id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg" alt="Backyard photo">
-        <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg" alt="Memorial">
-        <img class="zoom" id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg" alt="Diamond pattern lines">
-        <img class="zoom" id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg" alt="Straight cut">
-        <img class="zoom" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes">
-        <img class="zoom" id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg" alt="Sego and border">
-        <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
-        <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio">
-        <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway">
-        <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
-    </section>
-    <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
-    <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow and landscape guy, I am the exception.</p>
-    <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>
-    <p id="bookNow">Open for business<br>Give us a call!!!</p>
-<!-- form for submiting a message to email-need node.js for POST action
-    <section id="form">
-        <div id="ContactUs-FormTitle">Contact Us:</div>
-        <form action="process-form"
-method="POST"
-enctype="multipart/form-data"
-name="EmailForm"><div id="divider"></div>
-    Name:<br>
-    <input class="form-input" type="text" size="19" name="Contact-Name"><br><br>
-    Email:<br>
-    <input class="form-input" type="email" name="Contact-Email"><br><br> 
-    Message:<br> 
-    <textarea id="form-input-area" name="Contact-Message" rows="6″ cols="20″>
-    </textarea><br><br> 
-    <button type="submit" value="Submit">Send</button>
-</form>
-    </section>
--->
-    <p id="contact-section">Contacts:</p>
-    <p id="contacts">I can be reached via call or text anytime at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ArtofLawnCareLLC</title>
+        <link href="index.css" rel="stylesheet"/>
+        <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
+        <nav class="navbar"> <!--NavBar for section quicklink-->
+            <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
+            <a class="nav-link" href="#companyName">Welcome</a>  
+            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#images">Gallery</a>
+            <a class="nav-link" href="#about-me">About Me</a>
+            <a class="nav-link" href="#contacts">Contact-Us</a>
+        </nav>
+    </head>
+    <body>
+        <section id="imgHead">   <!--Name, Motto, Background photo-->
+            <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
+            <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
+        </section>
+        <div id="welcomeMsg">Welcome to <strong>'The Art of Lawn Care'</strong><br>A new start-up, fair-priced <strong>High Quality</strong> Lawn Management service.<br>From Artistic lawn cutting and Precise String trimming to Landscapes or Pathways.<br>If your job needs an Artistic touch we are the right company for you.
+        </div>
+        <section id="serviceArea">  <!--Service area with Map and named locations-->
+            <p>Who and where do I serve:</p>
+            <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Beverly Hills, Citrus Springs, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
+                <img class="zoom" id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg" alt="Florida map">
+            <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
+        </section>
+        <div id="services">Services:</div>  <!--Servive list and photos--> 
+            <li id="ServiceList">Artistic Lawn Cutting</li>
+            <li id="ServiceList">Percise String Trimming / Edging</li>
+            <li id="ServiceList">Landscape Bed Maintenance</li>
+            <li id="ServiceList">Hedge Trimming</li>
+            <li id="ServiceList">Flower Plantings / Design</li>
+            <li id="ServiceList">Pathways / Patios</li>
+            <li id="ServiceList">Stonework</li>
+            <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
+            <li id="ServiceList">And More....</li>
+        <div id="photo-text">Photo Gallery:</div>
+        <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
+            <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg" alt="3-teir lines">
+            <img class="zoom" id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg" alt="Staircase lines">
+            <img class="zoom" id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg" alt="Backyard photo">
+            <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg" alt="Memorial">
+            <img class="zoom" id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg" alt="Diamond pattern lines">
+            <img class="zoom" id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg" alt="Straight cut">
+            <img class="zoom" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes">
+            <img class="zoom" id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg" alt="Sego and border">
+            <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
+            <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio">
+            <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway">
+            <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
+        </section>
+        <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
+        <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow and landscape guy, I am the exception.</p>
+        <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>
+        <p id="bookNow">Open for business<br>Give us a call!!!</p>
+    <!-- form for submiting a message to email-need node.js for POST action
+        <section id="form">
+            <div id="ContactUs-FormTitle">Contact Us:</div>
+            <form action="process-form"
+    method="POST"
+    enctype="multipart/form-data"
+    name="EmailForm"><div id="divider"></div>
+        Name:<br>
+        <input class="form-input" type="text" size="19" name="Contact-Name"><br><br>
+        Email:<br>
+        <input class="form-input" type="email" name="Contact-Email"><br><br> 
+        Message:<br> 
+        <textarea id="form-input-area" name="Contact-Message" rows="6″ cols="20″>
+        </textarea><br><br> 
+        <button type="submit" value="Submit">Send</button>
+    </form>
+        </section>
+    -->
+        <p id="contact-section">Contacts:</p>
+        <p id="contacts">I can be reached via call or text anytime at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
+        <script src="index.js"></script>
+    </body>
 </html>
